k8s/apps/default/tautulli/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  template:
    spec:
      containers:
        - name: tautulli
          image: ghcr.io/home-operations/tautulli:2.18.2@sha256:5d55eb06f2b77eb09001b2f884b0b3a9ed3adf8416c6209c563796e18eaa43a4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: &port 80
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 192Mi
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            httpGet:
              path: /status
              port: *port
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            httpGet:
              path: /status
              port: *port
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            httpGet:
              path: /status
              port: *port
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /add-ons
              name: add-ons
            - mountPath: /config
              name: config
            - mountPath: /config/cache
              name: cache
            - mountPath: /scripts
              name: scripts
            - mountPath: /config/logs
              name: logs
          securityContext: &securityContext
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: { drop: ["ALL"] }
        - name: jbops
          image: registry.k8s.io/git-sync/git-sync:v4.7.1
          imagePullPolicy: IfNotPresent
          args:
            - --repo=https://github.com/blacktwin/JBOPS
            - --ref=master
            - --period=24h
            - --root=/add-ons
          resources:
            requests:
              memory: 64Mi
            limits:
              memory: 64Mi
          volumeMounts:
            - mountPath: /add-ons
              name: add-ons
            - mountPath: /tmp
              name: tmp
          securityContext: *securityContext
      restartPolicy: Always
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 568
        runAsUser: 568
        supplementalGroups: [3005]
        runAsNonRoot: true
      volumes:
        - emptyDir: {}
          name: add-ons
        - name: config
          persistentVolumeClaim:
            claimName: tautulli
        - name: cache
          persistentVolumeClaim:
            claimName: tautulli-cache
        - name: scripts
          configMap:
            name: tautulli-scripts
        - name: tmp
          emptyDir: {}
        - name: logs
          emptyDir: {}
