k8s/apps/default/tautulli/app/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  serviceName: tautulli
  template:
    spec:
      containers:
        - name: tautulli
          image: ghcr.io/tautulli/tautulli:v2.14.4
          command: ["/usr/local/bin/python", "Tautulli.py"]
          args:
            - "--config=/config/config.ini"
            - "--datadir=/config"
            - "--port=80"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: &port 80
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 500Mi
            requests:
              cpu: 10m
              memory: 250Mi
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: *port
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: *port
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: *port
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /add-ons
              name: add-ons
            - mountPath: /config
              name: config
            - mountPath: /scripts
              name: scripts
          securityContext: &securityContext
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: { drop: ["ALL"] }
        - name: jbops
          image: registry.k8s.io/git-sync/git-sync:v4.2.4
          imagePullPolicy: IfNotPresent
          args:
            - --repo=https://github.com/blacktwin/JBOPS
            - --ref=master
            - --period=24h
            - --root=/add-ons
          volumeMounts:
            - mountPath: /add-ons
              name: add-ons
            - mountPath: /tmp
              name: tmp
          securityContext: *securityContext
      restartPolicy: Always
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 568
        runAsUser: 568
        runAsNonRoot: true
      volumes:
        - emptyDir: {}
          name: add-ons
        - name: scripts
          configMap:
            name: tautulli-scripts
        - name: tmp
          emptyDir: {}
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteMany
        resources:
          requests:
            storage: 5Gi
        storageClassName: ceph-filesystem
        volumeMode: Filesystem
