k8s/apps/default/tautulli/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
