k8s/apps/default/tautulli/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
spec:
  ingressClassName: internal
  rules:
    - host: &host tautulli.cbannister.xyz
      http:
        paths:
          - backend:
              service:
                name: tautulli
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
